--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,8 @@ jobs:
       - name: Test
         run: |
           python rho_pollard.py
-          if [[ $? -ne 0 ]]; then
+          if [[ ! $(python rho_pollard.py) = 28 ]]; then
             echo "First test failed"
             exit 1
-          fi
+          fi  
+
