--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,10 @@ jobs:
             echo "First test failed"
             exit 1
           fi
+            if [[ ! $(python main.py) =~ 2[0-9] ]]; then
+            echo "Second test failed"
+            exit 1
+          fi  
+
 
 
